# ddd-python

./: .gitignore  pyproject.toml
ddd_python/: main.py
ddd_python/domain/entity/: customer.py  order.py  product.py  test_address.py  test_custormer.py  test_order.py  test_product.py
ddd_python/domain/repository/: customer_repository_inteface.py  product_repository_inteface.py  repository_interface.py
ddd_python/domain/service/: order_service.py  product_service.py  test_order_service.py  test_product_service.py
ddd_python/entity/: address.py  customer.py  order.py  order_item.py  product.py  test_address.py  test_custormer.py  test_order.py  test_product.py
ddd_python/infrastructure/db/mappers/: customer_mapper.py
ddd_python/infrastructure/db/sqlalchemy/config/: database.py
ddd_python/infrastructure/db/sqlalchemy/model/: customer_model.py  product_model.py
ddd_python/infrastructure/repository/: customer_repository.py  product_repository.py  test_customer_repository.py  test_product_repository.py
ddd_python/service/: order_service.py  product_service.py  test_order_service.py  test_product_service.py
