[tool.poetry]
name = "ddd-python"
version = "0.1.0"
description = ""
authors = ["WagnerReis <wagnerreis1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
